# npf-web-extension

./: .env.example  .eslintrc  .gitignore  .prettierrc  LICENSE  README.md  craco.config.js  gulpfile.js  package-lock.json  package.json  pre_setup.py  pyproject.toml  readme.rst  setup.cfg  tailwind.config.js  tsconfig.json  workspace.code-workspace
.github/workflows/: build.yml  publish_on_release.yml  publish_package.yml  release_on_pr.yml
docs/: README.md  _sidebar.md  index.html  python.md  quickstart.md  settings.md
docs/quickstart/: index.md
public/: index.html
python/: pyproject.toml  setup.cfg
python_src/npf_web_extension/: app.py  template.html
scripts/: build-non-split.js
src/: App.tsx  index.css  index.scss
src/components/: ChartComponent.tsx  WebsiteLoader.tsx
src/components/charts/: ChartComponent.tsx  ChartPanelComponent.tsx  ChartSplitterComponent.tsx
src/components/charts/bar/: BarChart.tsx  utils.ts
src/components/charts/boxplot/: BoxPlotChart.tsx  (+1 more)
src/components/loader/: spinner.tsx
src/components/modal/: Modal.tsx
src/components/settings/: SettingsComponent.tsx  SettingsModal.tsx  SplitGraphsSettingsComponent.tsx  utils.test.ts  utils.ts
src/styles/: form.module.scss  grid.module.scss  modal.module.scss  spinner.module.css
src/utils/: app.ts  chart.test.ts  chart.ts  data.ts  events.ts  misc.test.ts  misc.ts
src/utils/charts-wrapper/: chart.tsx  typedCharts.tsx  types.ts  utils.ts
src/utils/configuration/: data_analyzer.test.ts  data_analyzer.ts  index.ts  parser.test.ts  parser.ts  types.ts  utils.test.ts  utils.ts
src/utils/examples/: cpu_algorithm.ts  iperf.ts  math.ts  pos.ts  world_population.ts
src/utils/settings/: types.ts
(+12 files in other folders)
