[metadata]
name = npf-web-extension
description = NPF Web extension designed to export results to a single html web app
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dpcodebiz/npf-web-extension
project_urls =
    Bug Tracker = https://github.com/dpcodebiz/npf-web-extension/issues
    Changelog = https://github.com/dpcodebiz/npf-web-extension/releases
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Intended Audience :: Developers

[options]
package_dir =
    = python_src
packages = find:
python_requires = >=3.6
include_package_data = True

[options.packages.find]
where = python_src

[setuptools_scm]
version_scheme = guess-next-dev
local_scheme = no-local-version

[options.entry_points]
console_scripts =
    npf-web-extension-demo = npf_web_extension.app:main
