[metadata]
name = npf-web-extension
description = WIP test pip package creation
long_description_content_type = text/markdown
url = https://github.com/dpcodebiz/npf-web-extension
project_urls =
    Bug Tracker = https://github.com/dpcodebiz/npf-web-extension/issues
    Changelog = https://github.com/dpcodebiz/npf-web-extension/releases
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Intended Audience :: Developers

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    gha_python_packaging_demo = gha_python_packaging_demo.app:entry_point
